# Digital-Humanities-2026-Group-5

./: README.md
my_chatbot/backend/: .env.example  .gitignore  README.md  check_cuda.py  demo_avatar.py  demo_avatar_expressions.py  demo_avatar_showcase.py  demo_avatar_smooth.py  download_models.py  find_voice.py  print_pose_params.py  pyproject.toml  requirements.txt  save_avatar_samples.py  setup_cuda.bat  setup_cuda_env.md  test_cuda_rendering.py  verify_avatar_system.py
my_chatbot/backend/src/: __init__.py  app_controller.py  app_gui.py  audio_player.py  avatar_renderer.py  avatar_window.py  chatbot_app.py  design_system.py  error_handler.py  hardware_detection.py  lip_sync_controller.py  llm_service.py  main.py  mic_recorder.py  path_utils.py  resource_monitor.py  retry.py  sentence_chunker.py  stream_coordinator.py  streaming_pipeline.py  stt_service.py  tts_service.py
my_chatbot/backend/tests/: __init__.py  test_app_controller_unit.py  test_app_gui_unit.py  test_audio_player_unit.py  test_avatar_renderer.py  test_avatar_renderer_fps_property.py  test_avatar_renderer_frames.py  test_avatar_renderer_init_property.py  test_banks_property.py  test_chatbot_error_integration.py  test_classifier_property.py  test_debate_integration.py  test_debate_logger_property.py  test_e2e_wiring.py  test_error_handler.py  test_error_handling_unit.py  test_hardware_detection_property.py  test_lip_sync_consistency_property.py  test_lip_sync_controller.py  test_lip_sync_pause_property.py  test_lip_sync_phoneme_property.py  test_lip_sync_synchronization_property.py  test_main_unit.py  (+18 more)
(+37 files in other folders)
